just a few entries, the ones on which we agree

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 <a id="tutorials-lehrtexte--tutorials-educational-texts" class="anchor" href="#tutorials-lehrtexte--tutorials-educational-texts" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tutorials, Lehrtexte | Tutorials, Educational Texts</h2>
 
 <ul>
+<li><a href="http://www.bbc.co.uk/languages/german/>http://www.bbc.co.uk/languages/german/</a></li>
+<li><a href="http://www.audio-lingua.eu/"></a></li>
+<li><a href="http://www.goethe.de/ins/us/saf/prj/stg/enindex.htm"></a></li>
 <li><a href="http://en.wikibooks.org/wiki/German">http://en.wikibooks.org/wiki/German</a></li>
 <li><a href="http://www.openculture.com/free_german_lessons">http://www.openculture.com/free_german_lessons</a></li>
 <li><a href="http://www.nachrichtenleicht.de/">http://www.nachrichtenleicht.de/</a></li>
@@ -104,6 +107,14 @@
 <ul>
 <li><a href="http://www.deutschlandfunk.de/">http://www.deutschlandfunk.de/</a></li>
 <li><a href="http://deutschewelle.radio.de/">http://deutschewelle.radio.de/</a></li>
+</ul>
+
+<h2>
+<a id="fernsehen--tv" class="anchor" href="#fernsehen--tv" aria-hidden="true"><span class=octicon octicon-link></span></a>Fernsehen | TV</h2>
+
+<ul>
+<li><a href="http://www.tagesschau.de/index.html>http://www.tagesschau.de/index.html</a></li>
+<li><a href="http://info.arte.tv/de>http://info.arte.tv/de</a></li>
 </ul>
 
 <h2>
